[gd_scene load_steps=15 format=2]

[ext_resource path="res://lobby/scenes/main/main.gd" type="Script" id=1]
[ext_resource path="res://themes/FlatUI/kenneyUI-blue.tres" type="Theme" id=2]
[ext_resource path="res://assets/information-button.png" type="Texture" id=3]
[ext_resource path="res://themes/FlatUI/UIpack_vector.svg" type="Texture" id=4]
[ext_resource path="res://assets/list.png" type="Texture" id=5]
[ext_resource path="res://assets/update.png" type="Texture" id=6]
[ext_resource path="res://lobby/scenes/main/server.gd" type="Script" id=7]
[ext_resource path="res://lobby/scenes/main/main_buttons.gd" type="Script" id=8]
[ext_resource path="res://settings/settings_menu.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxTexture" id=44]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 1, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=45]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 421, 244, 190, 45 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=46]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 1, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=47]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 211, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=48]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 211, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_constants/separation = 12
alignment = 2

[node name="main" type="VBoxContainer" parent="HBox"]
margin_right = 260.0
margin_bottom = 570.0
grow_horizontal = 0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
custom_constants/separation = 3
alignment = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hostBtn" type="Button" parent="HBox/main"]
margin_top = 393.0
margin_right = 260.0
margin_bottom = 435.251
focus_neighbour_bottom = NodePath("../joinBtn")
focus_next = NodePath("../joinBtn")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.27451 )
text = "Lobby erstellen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinBtn" type="Button" parent="HBox/main"]
margin_top = 438.0
margin_right = 260.0
margin_bottom = 480.251
focus_neighbour_top = NodePath("../hostBtn")
focus_neighbour_bottom = NodePath("../settingsBox/settingsBtn")
focus_next = NodePath("../settingsBox/settingsBtn")
focus_previous = NodePath("../hostBtn")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.27451 )
text = "Spiel beitreten"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsBox" type="HBoxContainer" parent="HBox/main"]
margin_top = 483.0
margin_right = 260.0
margin_bottom = 525.0
custom_constants/separation = 5

[node name="settingsBtn" type="Button" parent="HBox/main/settingsBox"]
margin_right = 213.0
margin_bottom = 42.251
focus_neighbour_top = NodePath("../../joinBtn")
focus_neighbour_bottom = NodePath("../../leaveBtn")
focus_next = NodePath("../../leaveBtn")
focus_previous = NodePath("../../joinBtn")
size_flags_horizontal = 3
text = "Einstellungen"

[node name="updateBtn" type="Button" parent="HBox/main/settingsBox"]
margin_left = 218.0
margin_right = 260.251
margin_bottom = 42.251
rect_min_size = Vector2( 42.251, 42.251 )
custom_styles/hover = SubResource( 44 )
custom_styles/pressed = SubResource( 45 )
custom_styles/focus = SubResource( 46 )
custom_styles/disabled = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
icon = ExtResource( 6 )
expand_icon = true

[node name="leaveBtn" type="Button" parent="HBox/main"]
margin_top = 528.0
margin_right = 260.0
margin_bottom = 570.251
focus_neighbour_top = NodePath("../settingsBox/settingsBtn")
focus_previous = NodePath("../settingsBox/settingsBtn")
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.27451 )
text = "Spiel verlassen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBox"]
margin_left = 377.0
margin_right = 597.0
margin_bottom = 570.0
size_flags_horizontal = 6
size_flags_vertical = 5
custom_constants/separation = 43
alignment = 2

[node name="car" type="Button" parent="HBox/VBoxContainer"]
margin_top = 528.0
margin_right = 220.0
margin_bottom = 570.251
rect_min_size = Vector2( 220, 0 )
text = "Auto Ausw√§hlen"

[node name="Server" type="VBoxContainer" parent="HBox"]
margin_left = 714.0
margin_right = 994.0
margin_bottom = 570.0
rect_min_size = Vector2( 280, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nickname" type="LineEdit" parent="HBox/Server"]
margin_right = 280.0
margin_bottom = 39.4343
focus_neighbour_bottom = NodePath("../Hostname")
focus_next = NodePath("../Hostname")
theme = ExtResource( 2 )
custom_colors/selection_color = Color( 0.505882, 0.980392, 1, 1 )
placeholder_text = "Nickname"
placeholder_alpha = 0.4
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hostname" type="LineEdit" parent="HBox/Server"]
margin_top = 43.0
margin_right = 280.0
margin_bottom = 82.4343
focus_neighbour_top = NodePath("../Nickname")
focus_previous = NodePath("../Nickname")
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_colors/selection_color = Color( 0.505882, 0.980392, 1, 1 )
placeholder_text = "Hostname:Port"
placeholder_alpha = 0.4
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -15.0
margin_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 42 )
custom_constants/separation = 5

[node name="history" type="Button" parent="stats"]
margin_right = 42.251
margin_bottom = 42.251
rect_min_size = Vector2( 42.251, 42.251 )
custom_styles/hover = SubResource( 44 )
custom_styles/pressed = SubResource( 45 )
custom_styles/focus = SubResource( 46 )
custom_styles/disabled = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
icon = ExtResource( 5 )
expand_icon = true

[node name="credits" type="Button" parent="stats"]
margin_left = 47.0
margin_right = 89.251
margin_bottom = 42.251
rect_min_size = Vector2( 42.251, 42.251 )
custom_styles/hover = SubResource( 44 )
custom_styles/pressed = SubResource( 45 )
custom_styles/focus = SubResource( 46 )
custom_styles/disabled = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
icon = ExtResource( 3 )
expand_icon = true

[node name="Settings" parent="." instance=ExtResource( 9 )]
visible = false
margin_right = -100.0
margin_bottom = -100.0

[node name="Update" type="HTTPRequest" parent="."]

[connection signal="pressed" from="HBox/main/hostBtn" to="HBox/main" method="_on_hostBtn_pressed"]
[connection signal="pressed" from="HBox/main/joinBtn" to="HBox/main" method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="HBox/main/settingsBox/settingsBtn" to="HBox/main" method="_on_settingsBtn_pressed"]
[connection signal="pressed" from="HBox/main/settingsBox/updateBtn" to="HBox/main" method="_on_updateBtn_pressed"]
[connection signal="pressed" from="HBox/main/leaveBtn" to="HBox/main" method="_on_leaveBtn_pressed"]
[connection signal="pressed" from="HBox/VBoxContainer/car" to="." method="_on_car_pressed"]
[connection signal="text_changed" from="HBox/Server/Nickname" to="HBox/Server" method="_on_nickname_changed"]
[connection signal="text_changed" from="HBox/Server/Hostname" to="HBox/Server" method="_on_Hostname_text_changed"]
[connection signal="pressed" from="stats/credits" to="." method="_on_credits_pressed"]
[connection signal="request_completed" from="Update" to="." method="_on_update_request_completed"]
